--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "ntencoder"
 version = "0.1.0"
 authors = ["brurucy <brurucy@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lasso = "0.5.1"
-clap = "3.0.0-beta.2"
+lasso = "0.6.0"
+clap = "3.1.0"
 linecount = "0.1.0"
